Change gadgets structure + add my setup

--- a/_posts/2019-12-3-obratel.md
+++ b/_posts/2019-12-3-obratel.md
@@ -38,7 +38,7 @@ url="obratel/obratel6.jpg"
 
 
 {% include download_local.html
-url="obratel/Obratel_podklady.zip"
+url="obratel/Obratel.3mf"
 text="Stáhnout výrobní podklady"
 %}
 
