--- a/_posts/2022-03-19-db-rotex.md
+++ b/_posts/2022-03-19-db-rotex.md
@@ -1,5 +1,5 @@
 ---
-title: Aplikace s databází dokončenýh produktů
+title: Aplikace s databází dokončených produktů
 layout: post
 author: Kuba Andrýsek
 date: '2022-03-19 14:00:00 +1'
@@ -13,8 +13,8 @@ keywords: [rotex, web, ponožky, databáze, google-tabulky, javascript, npm]
 
 ## Google tabulky jako jednoduchá databáze
 
-Jako úložiště dat jsem zvolil Google tabulku. Jde totož velmi jednoduše upravovat i nezkušeným uživatelem.
-Díky kontingenčním tabulkám jdou z tabulek velmi jednoduše získávat specifická data a zabrazovat je například v grafech.
+Jako úložiště dat jsem zvolil Google tabulku. Jde totiž velmi jednoduše upravovat i nezkušeným uživatelem.
+Díky kontingenčním tabulkám jdou z tabulek velmi jednoduše získávat specifická data a zobrazovat je například v grafech.
 Také zde není problém se zálohou. Tabulka má nastavené automatické zálohu v přednastavený čas.
 
 {% include image.html
@@ -25,7 +25,7 @@ url="tabulka-rotex.png"
 
 ## Webová aplikace v Reactu
 
-Webová aplikace je vyvořena v JavaScriptové knihovně React. Ta zajišťuje veškeré vykreslování a zpracování vstupů.
+Webová aplikace je vytvořena v JavaScriptové knihovně React. Ta zajišťuje veškeré vykreslování a zpracování vstupů.
 Pro komunikaci s Google tabulkami využívám knihovnu [google-spreadsheet](https://theoephraim.github.io/node-google-spreadsheet/)
 
 {% include image-w.html
@@ -43,7 +43,7 @@ url="app-table.png"
 
 ### Interaktivní výběrová menu 
 
-Pro snadný a rychlý výběr parametrů se menu neustále přizpůsobují danému výveru
+Pro snadný a rychlý výběr parametrů se menu neustále přizpůsobují danému výběru
 
 {% include image.html
 url="interakt-kod.png"
@@ -53,7 +53,7 @@ url="interakt-velikost.png"
 
 ## Nasazení do provozu
 
-Webová stránka běží uvnitř prohlížeče na dotikovém tabletu s Windows 10. 
+Webová stránka běží uvnitř prohlížeče na dotykovém tabletu s Windows 10. 
 
 {% include image.html
 url="tablet-bok.jpg"
