Add two posts, update more

--- a/_posts/2022-03-19-db-rotex.md
+++ b/_posts/2022-03-19-db-rotex.md
@@ -3,10 +3,10 @@ title: Aplikace s databází dokončených produktů
 layout: post
 author: Kuba Andrýsek
 date: '2022-03-19 14:00:00 +1'
-category: Rotex                #category|kategorie -> pro novou kategorii je potřeba vytvořit stránku v "categories"
+category: Rotex
 description: Tvorba webové aplikace pro zaznamenávání dokončených ponožek propojená s Google tabulkami
 media_folder: dokoncovacka
-thumbnail: thumbnail.png
+thumbnail: thumbnail.jpg
 head_photo: head.png
 keywords: [rotex, web, ponožky, databáze, google-tabulky, javascript, npm]
 ---
