--- a/_posts/2022-03-19-db-rotex.md
+++ b/_posts/2022-03-19-db-rotex.md
@@ -15,7 +15,7 @@ keywords: [rotex, web, ponožky, databáze, google-tabulky, javascript, npm]
 
 Jako úložiště dat jsem zvolil Google tabulku. Jde totiž velmi jednoduše upravovat i nezkušeným uživatelem.
 Díky kontingenčním tabulkám jdou z tabulek velmi jednoduše získávat specifická data a zobrazovat je například v grafech.
-Také zde není problém se zálohou. Tabulka má nastavené automatické zálohu v přednastavený čas.
+Také zde není problém se zálohou. Tabulka má nastavené automatické zálohy v přednastavený čas.
 
 {% include image.html
 url="tabulka-db.png"
