--- a/_posts/2018-08-23-web-rotex.md
+++ b/_posts/2018-08-23-web-rotex.md
@@ -6,8 +6,9 @@ author: Kuba Andrýsek            #authos|autor
 date: '2018-08-23 16:00:00 +1'   #date|datum vytvoření článku
 category: Rotex
 description: Zhotovení responzivních webových stránek a PDF katalogu pro firmu Rotex Vysočina              #Header|nadpis
-thumbnail: web-rotex/main.png              #thumbnail|titulní foto -> cesta "/img/blog/**nazev-clanku/Kolo.png**"
-head_photo: web-rotex/head.png              #vrchni fotka  -> cesta "/img/blog/**nazev-clanku/Kolo.png**"
+media_folder: web-rotex
+thumbnail: main.png              #thumbnail|titulní foto -> cesta "/img/blog/**nazev-clanku/Kolo.png**"
+head_photo: head.png              #vrchni fotka  -> cesta "/img/blog/**nazev-clanku/Kolo.png**"
 keywords: [rotex, ponozky, web, katalog, responzivni, pdf]		#Kcicova slova
 --- 
 
@@ -19,10 +20,10 @@ V začátku letních prázdnin jsem připravoval návrh a zpracování nových w
 Pro tvorbu webovek jsem zvolil [Wordpress](https://wordpress.org) pro jedho jednoduché nasazení a následné používaní. Pro webovky jsem vybral nejvhodnější šablonu a vytvožil několik stránek.
 
 {% include image.html
-url="web-rotex/main.png"
+url="main.png"
 %}
 {% include image.html
-url="web-rotex/contact.png"
+url="contact.png"
 %}
 
 ## Katalog ponožek
@@ -30,5 +31,5 @@ Druhou částí bylo vytvoření aktuálního katalogu ponožek. Pro návrh jsem
 Katalog obsahuje dvě fotky výrobky, název a velikosti ve kterých se výrobek vyrábí.   
 
 {% include image.html
-url="web-rotex/catalog.png"
+url="catalog.png"
 %}
