--- a/_posts/2019-12-20-betlem.md
+++ b/_posts/2019-12-20-betlem.md
@@ -6,7 +6,8 @@ author: Kuba Andrýsek            #authos|autor
 date: '2019-12-20 15:00:00 +1'   #date|datum vytvoření článku
 category: Laser               #category|kategorie -> pro novou kategorii je potřeba vytvořit stránku v "categories"
 description: Svítící betlém jako Vánoční dárek             #Header|nadpis
-thumbnail: betlem/Betlem2.jpg              #thumbnail|titulní foto -> cesta "/img/blog/**nazev-clanku/Kolo.png**"
+media_folder: betlem
+thumbnail: Betlem2.jpg              #thumbnail|titulní foto -> cesta "/img/blog/**nazev-clanku/Kolo.png**"
 --- 
 
 # Svítící betlém jako Vánoční dárek
@@ -14,19 +15,19 @@ thumbnail: betlem/Betlem2.jpg              #thumbnail|titulní foto -> cesta "/i
 Betlém je vyroben z 4 mm tlustého plexi, které je přidělané na dřevěném držáku. Uvnitř držáku je umístěn RGB LED pásek dlouhý 15 cm.
 
 {% include image.html
-url="betlem/Betlem1.jpg"
+url="Betlem1.jpg"
 description="Betlem1"
 %}
 {% include image.html
-url="betlem/Betlem2.jpg"
+url="Betlem2.jpg"
 description="Betlem2"
 %}
 {% include image.html
-url="betlem/Betlem3.jpg"
+url="Betlem3.jpg"
 description="Betlem3"
 %}
 {% include image.html
-url="betlem/Betlem4.jpg"
+url="Betlem4.jpg"
 description="Betlem4"
 %}
 
@@ -37,13 +38,13 @@ Rozměry: 150*100 mm
 Doba výroby: cca 2 hodiny
 
 {% include image.html
-url="betlem/Podklady.png"
+url="Podklady.png"
 description="Podklady"
 %}
 
 
 {% include download_local.html
-url="betlem/Betlem.pdf"
+url="Betlem.pdf"
 text="Stáhnout výrobní podklady"
 %}
 
