--- a/_posts/2019-12-3-nesting.md
+++ b/_posts/2019-12-3-nesting.md
@@ -6,7 +6,8 @@ author: Kuba Andrysek            #authos|autor
 date: '2019-12-03 15:00:00 +1'   #date|datum vytvoření článku
 category: Návody               #category|kategorie -> pro novou kategorii je potřeba vytvořit stránku v "categories"
 description: Návod pro přípravu podkladů pro laser z Fusion 360             #Header|nadpis
-thumbnail: nesting/nesting6.png              #thumbnail|titulní foto -> cesta "/img/blog/**nazev-clanku/Kolo.png**"
+media_folder: nesting
+thumbnail: nesting6.png              #thumbnail|titulní foto -> cesta "/img/blog/**nazev-clanku/Kolo.png**"
 --- 
 
 # Návod pro přípravu podkladů pro laser z Fusion 360
@@ -30,6 +31,6 @@ thumbnail: nesting/nesting6.png              #thumbnail|titulní foto -> cesta "
 
 
 {% include download_local.html
-url="nesting/Fusion-360-postprocesor+nesting.pdf"
+url="Fusion-360-postprocesor+nesting.pdf"
 text="Stáhnout návod"
 %}
