--- a/_posts/2020-01-08-uv-box.md
+++ b/_posts/2020-01-08-uv-box.md
@@ -6,8 +6,9 @@ author: Kuba Andrýsek            #authos|autor
 date: '2020-01-08 14:00:00 +1'   #date|datum vytvoření článku
 category: SLA
 description: Vytvrzovací komora k SLA 3D tiskárně              #Header|nadpis
-thumbnail: uv-box/main.jpg              #thumbnail|titulní foto -> cesta "/img/blog/**nazev-clanku/Kolo.png**"
-head_photo: uv-box/head.jpg              #thumbnail|titulní foto -> cesta "/img/blog/**nazev-clanku/Kolo.png**"
+media_folder: uv-box
+thumbnail: main.jpg              #thumbnail|titulní foto -> cesta "/img/blog/**nazev-clanku/Kolo.png**"
+head_photo: head.jpg              #thumbnail|titulní foto -> cesta "/img/blog/**nazev-clanku/Kolo.png**"
 keywords: [SLA, Ikea, ELEGOO Mars, UV, Robotárna]
 --- 
 
@@ -19,7 +20,7 @@ Začátkem tohoto školního roku jsme do [Robotárny](https://helceletka.cz/rob
 ## Naše SLA 3D tiskárna
 Zakoupili jsme tiskárnu [ELEGOO Mars](https://www.elegoo.com/collections/3d-printer-accessories/products/elegoo-mars-uv-photocuring-lcd-3d-printer) která má 2K tiskový display a přesnost tisku je 47 μm.
 {% include image.html
-url="uv-box/sla.jpg"
+url="sla.jpg"
 %}
 ## UV Box
 Pro vytvrzení dílů z této 3D tiskárny je potřeba mít vytvrzovací komoru. Vytisklé díly jsou totiž jen lehce zatvrdlé a je nutné je nechat dotvrdit pod UV světlem.
@@ -28,18 +29,18 @@ Pro vytvrzení dílů z této 3D tiskárny je potřeba mít vytvrzovací komoru.
 Základem našeho UV Boxu je kovová [IKEA krabice](https://www.ikea.com/cz/cs/p/lixhult-ulozna-sestava-bila-bila-s89161508/) (25cm) nebo [větší IKEA krabice](https://www.ikea.com/cz/cs/p/haellan-skrinka-bila-50363729/) (45cm). Dále je potřeba UV LED pásek, my jsme využili pětimetrový [12V UV LED pásek](https://www.aliexpress.com/cheap/cheap-12v-uv-led-strip-uv.html) z Aliexpressu. Pásek jsem nalepil přímo na vnitřek boxu do spirály jak je vidět na obrázcích. Pro napájení jsem použil 12V zdroj. Dále jsem komoru doplnil o kousek bílého LED pásku pro osvětlení komory po vytvrzení a celé jsem to spojil 3 polohovým přepínačem.
 
 {% include image.html
-url="uv-box/start.jpg"
+url="start.jpg"
 %}
 {% include image.html
-url="uv-box/insert.jpg"
+url="insert.jpg"
 %}
 
 
 {% include image.html
-url="uv-box/main.jpg"
+url="main.jpg"
 %}
 {% include image.html
-url="uv-box/led.jpg"
+url="led.jpg"
 %}
 
 
@@ -47,10 +48,10 @@ url="uv-box/led.jpg"
 Při vytvrzování je ideální díly otáčet tak, aby byly stejnoměrně vytvrzené ze všech stran. K tomuto účelu jsem koupil z Aliexpressu [solární otáčecí pdoložku](https://www.aliexpress.com/cheap/cheap-rotating-stand-3d-printer.html).
 
 {% include image.html
-url="uv-box/switch.jpg"
+url="switch.jpg"
 %}
 {% include image.html
-url="uv-box/printer.jpg"
+url="printer.jpg"
 %}
 
 
