--- a/_posts/2017-06-13-lezcata.md
+++ b/_posts/2017-06-13-lezcata.md
@@ -6,22 +6,23 @@ author: Kuba Andrýsek            #authos|autor
 date: '2017-06-13 15:00:00 +1'   #date|datum vytvoření článku
 category: Lezčata               #category|kategorie -> pro novou kategorii je potřeba vytvořit stránku v "categories"
 description: Webové stránky na míru pro lezecký oddíl Lezčata             #Header|nadpis
-thumbnail: lezcata/lezcata14.jpg              #thumbnail|titulní foto -> cesta "/img/blog/**nazev-clanku/Kolo.png**"
+media_folder: lezcata
+thumbnail: lezcata14.jpg              #thumbnail|titulní foto -> cesta "/img/blog/**nazev-clanku/Kolo.png**"
 --- 
 
 # Webové stránky na míru pro lezecký oddíl Lezčata
 ## [www.lezcata.cz](http://lezcata.cz/)
 
 {% include image-h.html
-url="lezcata/lezcata5.jpg"
+url="lezcata5.jpg"
 h="500px"
 %}
 {% include image-h.html
-url="lezcata/lezcata7.jpg"
+url="lezcata7.jpg"
 h="500px"
 %}
 {% include image-h.html
-url="lezcata/lezcata8.jpg"
+url="lezcata8.jpg"
 h="500px"
 %}
 
@@ -30,36 +31,17 @@ h="500px"
 ## Fotky z akcí jsou nahrány do Google Fotek a nasdíleny na stránky
 
 {% include image.html
-url="lezcata/lezcata7.jpg"
+url="lezcata7.jpg"
 %}
 
 ## Videa z akcí
 
 {% include image.html
-url="lezcata/lezcata12.jpg"
+url="lezcata12.jpg"
 %}
 
 ## Informace o závodech
 
 {% include image.html
-url="lezcata/lezcata9.jpg"
+url="lezcata9.jpg"
 %}
-
-
-<!-- 
-{% include image.html
-url="lezcata/lezcata21.jpg"
-%}
-{% include image.html
-url="lezcata/lezcata8.jpg"
-%}
-{% include image.html
-url="lezcata/lezcata7.jpg"
-%}
-
-{% include image.html
-url="lezcata/lezcata10.gif"
-%}
-{% include image.html
-url="lezcata/lezcata6.jpg"
-%} -->
