--- a/_posts/2019-10-15-roboruka.md
+++ b/_posts/2019-10-15-roboruka.md
@@ -5,8 +5,9 @@ layout: post                     #layout|šablona
 author: Kuba Andrýsek            #authos|autor
 date: '2019-10-15 19:00:00 +1'   #date|datum vytvoření článku
 category: Roboruka               #category|kategorie -> pro novou kategorii je potřeba vytvořit stránku v "categories"
+media_folder: roboruka
 description: Roboruka je robotická stavebnice připravovaná na Robotický tábor 2019             #Header|nadpis
-thumbnail: roboruka/Dva2.jpg            #thumbnail|titulní foto -> cesta "/img/blog/**nazev-clanku/Kolo.png**"
+thumbnail: Dva2.jpg            #thumbnail|titulní foto -> cesta "/img/blog/**nazev-clanku/Kolo.png**"
 --- 
 
 ## Roboruka je robotická stavebnice z Robotárny ([pobočka DDM Helceletova](https://helceletka.cz/)). Tato stavebnice byla poprvé uvedena na Robotickém táboře 2019.
@@ -14,19 +15,16 @@ thumbnail: roboruka/Dva2.jpg            #thumbnail|titulní foto -> cesta "/img/
 Jedná se o všestranně využitelného robota. Vhodný do robotických soutěží (např. na [Robotickém dni](http://robotickyden.cz/) na soutěž Roadside Assistance). Rukou hýbají 3 serva, což jí umožňuje mít velký manipulační prostor.
 
 {% include image.html
-url="roboruka/Bok.jpg"
+url="Bok.jpg"
 %}
 {% include image.html
-url="roboruka/Jeden.jpg"
+url="Jeden.jpg"
 %}
 {% include image.html
-url="roboruka/Klepeto2.jpg"
+url="Klepeto2.jpg"
 %}
 {% include image.html
-url="roboruka/Zvrchu.jpg"
-%}
-{% include image.html
-url="roboruka/Zepredu.jpg"
+url="Zvrchu.jpg"
 %}
 
 
@@ -42,10 +40,10 @@ url="https://www.youtube.com/embed/K9F9NGAlI_M"
 Robotická ruka je řízená pomocí naší desky [RBController](https://github.com/RoboticsBrno/RB3201-RBControl). Mozkem této desky je [ESP32-WROOM](https://www.espressif.com/en/products/devkits/esp32-devkitc/overview). Deska zvládá řídit až 8 DC motorů a obsluhovat 8 enkodérů. Umí ovládat 8 modelářských serv nebo 4 inteligentní serva [LX-15D](https://www.hiwonder.hk/products/hiwonder-lx-15d-serial-bus-servo) . Expander přidáva možnost ovládat o 16 pinů více. Na desce je připravena ochrana proti přepólování a podvybití.
 
 {% include image.html
-url="roboruka/Deska_B.jpg"
+url="Deska_B.jpg"
 %}
 {% include image.html
-url="roboruka/Uvnitr2.jpg"
+url="Uvnitr2.jpg"
 %}
 
 
@@ -54,16 +52,16 @@ url="roboruka/Uvnitr2.jpg"
 Největší část robota je vyrobená z překližky vyřezané na laseru. Podvozek je vypálený z 3 milimetrové překližky a robotická ruka s rámem je postavena z 3 mm tlustých a 16 mm širokých dřevíček, které jsme si nařezali na popřebné délky.
 
 {% include image.html
-url="roboruka/13.jpg"
+url="13.jpg"
 %}
 {% include image.html
-url="roboruka/Dily.jpg"
+url="Dily.jpg"
 %}
 {% include image.html
-url="roboruka/Podvozek.jpg"
+url="Podvozek.jpg"
 %}
 {% include image.html
-url="roboruka/Konstrukce.jpg"
+url="Konstrukce.jpg"
 %}
 
 
@@ -73,10 +71,10 @@ url="roboruka/Konstrukce.jpg"
 Jízdu zajišťují dva DC motory řízené RBControllerem na které jsou připojeny magnetické enkodéry. Pohyb ruky řídí 3 inteligentní serva [LX-15D](https://www.hiwonder.hk/products/hiwonder-lx-15d-serial-bus-servo) propojená sériově do řídící desky. Serva mají rozsah 240 stupňů, kroutící moment 17 kg/cm a dokáží vyčítat svoji pozici.
 
 {% include image.html
-url="roboruka/Motor.jpg"
+url="Motor.jpg"
 %}
 {% include image.html
-url="roboruka/Motory.jpg"
+url="Motory.jpg"
 %}
 
 
@@ -85,16 +83,16 @@ url="roboruka/Motory.jpg"
 Robot je napájen z našeho baterry packu, který obsahuje dvě 18650 li-ion baterie. Rám packu tvoří plošný spoj do kterého jsou připájeny kontakty na baterie a výstupní piny. Pro nábíjení se využíva modul TP4056 s micro USB konektorem.
 
 {% include image.html
-url="roboruka/Bat1.jpg"
+url="Bat1.jpg"
 %}
 {% include image.html
-url="roboruka/Bat2.jpg"
+url="Bat2.jpg"
 %}
 {% include image.html
-url="roboruka/Nabijecka.jpg"
+url="Nabijecka.jpg"
 %}
 {% include image.html
-url="roboruka/Motor2.jpg"
+url="Motor2.jpg"
 %}
 
 
@@ -104,10 +102,10 @@ Robot jde ovládat přes univerzální mobilní aplikaci [RBController](https://
 
 
 {% include image.html
-url="roboruka/Rbc2.png"
+url="Rbc2.png"
 %}
 {% include image.html
-url="roboruka/App.jpg"
+url="App.jpg"
 %}
 
 
@@ -123,10 +121,10 @@ text="Příklady kódu"
 %}
 
 {% include image.html
-url="roboruka/Program.png"
+url="Program.png"
 %}
 {% include image.html
-url="roboruka/Git.jpg"
+url="Git.jpg"
 %}
 
 
@@ -135,10 +133,10 @@ url="roboruka/Git.jpg"
 Konstrukce ramene je navržená tak, aby při pohybu objekt v klepetech dobře držel a jednoduše se s ním manipulovalo. Pro přesný pohyb ramene využíváme dvě inteligentní serva, třetí zajišťuje otevírání klepete.
 
 {% include image.html
-url="roboruka/Rameno.jpg"
+url="Rameno.jpg"
 %}
 {% include image.html
-url="roboruka/Klepeto.jpg"
+url="Klepeto.jpg"
 %}
 
 
@@ -149,7 +147,7 @@ Na podvozek robota je připojena [senzorická lišta](https://github.com/Robotic
 
 
 {% include image.html
-url="roboruka/Lista.jpg"
+url="Lista.jpg"
 %}
 
 
@@ -158,10 +156,10 @@ url="roboruka/Lista.jpg"
 Rozšíření řídicí desky. Pomocí této desky jde robot programovat bez nutnosti otevření , zapínat/vypínat, ovládat tlačítka, atd.
 
 {% include image.html
-url="roboruka/UI.jpg"
+url="UI.jpg"
 %}
 {% include image.html
-url="roboruka/UI-robot.jpg"
+url="UI-robot.jpg"
 %}
 
 <!-- ### [Pohled do historie]() -->
