--- a/_posts/2019-12-3-obratel.md
+++ b/_posts/2019-12-3-obratel.md
@@ -6,7 +6,8 @@ author: Kuba Andrýsek            #authos|autor
 date: '2019-12-03 15:00:00 +1'   #date|datum vytvoření článku
 category: 3D-tisk               #category|kategorie -> pro novou kategorii je potřeba vytvořit stránku v "categories"
 description: 3D model obratle             #Header|nadpis
-thumbnail: obratel/obratel19.jpg              #thumbnail|titulní foto -> cesta "/img/blog/**nazev-clanku/Kolo.png**"
+media_folder: obratel
+thumbnail: obratel19.jpg              #thumbnail|titulní foto -> cesta "/img/blog/**nazev-clanku/Kolo.png**"
 --- 
 
 # 3D model obratle
@@ -14,16 +15,16 @@ thumbnail: obratel/obratel19.jpg              #thumbnail|titulní foto -> cesta 
 Přesný model lidského obratle vyrobený na 3D tiskárně v měřítku 1:1
 
 {% include image.html
-url="obratel/obratel18.jpg"
+url="obratel18.jpg"
 %}
 {% include image.html
-url="obratel/obratel1.jpg"
+url="obratel1.jpg"
 %}
 {% include image.html
-url="obratel/obratel2.jpg"
+url="obratel2.jpg"
 %}
 {% include image.html
-url="obratel/obratel6.jpg"
+url="obratel6.jpg"
 %}
 
 ## Výroba
@@ -38,24 +39,24 @@ url="obratel/obratel6.jpg"
 
 
 {% include download_local.html
-url="obratel/Obratel.3mf"
+url="Obratel.3mf"
 text="Stáhnout výrobní podklady"
 %}
 
 {% include image.html
-url="obratel/obratel20.jpg"
+url="obratel20.jpg"
 %}
 {% include image.html
-url="obratel/obratel21.jpg"
+url="obratel21.jpg"
 %}
 {% include image.html
-url="obratel/obratel8.jpg"
+url="obratel8.jpg"
 %}
 {% include image.html
-url="obratel/obratel7.jpg"
+url="obratel7.jpg"
 %}
 
 {% include image.html
-url="obratel/obratel10.gif"
+url="obratel10.gif"
 %}
 
