Post vyvojarska cesta, fix bugs, add Robotiada

--- a/_posts/2019-12-3-nesting.md
+++ b/_posts/2019-12-3-nesting.md
@@ -30,7 +30,7 @@ thumbnail: nesting6.png              #thumbnail|titulní foto -> cesta "/img/blo
 
 
 
-{% include download_local.html
-url="Fusion-360-postprocesor+nesting.pdf"
+{% include download_url.html
+url="https://drive.google.com/file/d/120yMV6bapFM7dEGs11l3gzDAo6fNYaFJ/view"
 text="Stáhnout návod"
 %}
