Change web to english

--- a/_posts/2017-06-13-lezcata.md
+++ b/_posts/2017-06-13-lezcata.md
@@ -1,5 +1,4 @@
 ---
-                                 #url se určuje podle názvu
 title: Webové stránky Lezcata.cz #title|název článku   
 layout: post                     #layout|šablona
 author: Kuba Andrýsek            #authos|autor
@@ -8,7 +7,8 @@ category: Lezčata               #category|kategorie -> pro novou kategorii je p
 description: Webové stránky na míru pro lezecký oddíl Lezčata             #Header|nadpis
 media_folder: lezcata
 thumbnail: lezcata14.jpg              #thumbnail|titulní foto -> cesta "/img/blog/**nazev-clanku/Kolo.png**"
---- 
+lang: cs
+---
 
 # Webové stránky na míru pro lezecký oddíl Lezčata
 ## [www.lezcata.cz](http://lezcata.cz/)
