--- a/_posts/2018-08-23-web-rotex.md
+++ b/_posts/2018-08-23-web-rotex.md
@@ -1,5 +1,4 @@
 ---
-                                 #url se určuje podle názvu
 title: Návrh webových stránek a katalogu #title|název článku   
 layout: post                     #layout|šablona
 author: Kuba Andrýsek            #authos|autor
@@ -10,7 +9,8 @@ media_folder: web-rotex
 thumbnail: main.png              #thumbnail|titulní foto -> cesta "/img/blog/**nazev-clanku/Kolo.png**"
 head_photo: head.png              #vrchni fotka  -> cesta "/img/blog/**nazev-clanku/Kolo.png**"
 keywords: [rotex, ponozky, web, katalog, responzivni, pdf]		#Kcicova slova
---- 
+lang: cs
+---
 
 ## Zhotovení responzivních stránek webových a PDF katalogu pro firmu Rotex Vysočina
 
