--- a/_posts/2019-10-15-roboruka.md
+++ b/_posts/2019-10-15-roboruka.md
@@ -1,5 +1,4 @@
 ---
-                                 #url se určuje podle názvu
 title: Roboruka #title|název článku   
 layout: post                     #layout|šablona
 author: Kuba Andrýsek            #authos|autor
@@ -8,7 +7,8 @@ category: Roboruka               #category|kategorie -> pro novou kategorii je p
 media_folder: roboruka
 description: Roboruka je robotická stavebnice připravovaná na Robotický tábor 2019             #Header|nadpis
 thumbnail: Dva2.jpg            #thumbnail|titulní foto -> cesta "/img/blog/**nazev-clanku/Kolo.png**"
---- 
+lang: cs
+---
 
 ## Roboruka je robotická stavebnice z Robotárny ([pobočka DDM Helceletova](https://helceletka.cz/)). Tato stavebnice byla poprvé uvedena na Robotickém táboře 2019.
 
