--- a/_posts/2019-12-3-obratel.md
+++ b/_posts/2019-12-3-obratel.md
@@ -1,5 +1,4 @@
 ---
-                                 #url se určuje podle názvu
 title: 3D model obratle #title|název článku   
 layout: post                     #layout|šablona
 author: Kuba Andrýsek            #authos|autor
@@ -8,7 +7,8 @@ category: 3D-tisk               #category|kategorie -> pro novou kategorii je po
 description: 3D model obratle             #Header|nadpis
 media_folder: obratel
 thumbnail: obratel19.jpg              #thumbnail|titulní foto -> cesta "/img/blog/**nazev-clanku/Kolo.png**"
---- 
+lang: cs
+---
 
 # 3D model obratle
 
