--- a/_posts/2020-01-08-uv-box.md
+++ b/_posts/2020-01-08-uv-box.md
@@ -1,5 +1,4 @@
 ---
-                                 #url se určuje podle názvu
 title: UV Box		 #title|název článku   
 layout: post                     #layout|šablona
 author: Kuba Andrýsek            #authos|autor
@@ -10,7 +9,8 @@ media_folder: uv-box
 thumbnail: main.jpg              #thumbnail|titulní foto -> cesta "/img/blog/**nazev-clanku/Kolo.png**"
 head_photo: head.jpg              #thumbnail|titulní foto -> cesta "/img/blog/**nazev-clanku/Kolo.png**"
 keywords: [SLA, Ikea, ELEGOO Mars, UV, Robotárna]
---- 
+lang: cs
+---
 
 # Vytvrzovací komora k SLA 3D tiskárně
 
