--- a/_posts/2022-03-19-db-rotex.md
+++ b/_posts/2022-03-19-db-rotex.md
@@ -9,6 +9,7 @@ media_folder: dokoncovacka
 thumbnail: thumbnail.jpg
 head_photo: head.png
 keywords: [rotex, web, ponožky, databáze, google-tabulky, javascript, npm]
+lang: cs
 ---
 
 ## Google tabulky jako jednoduchá databáze
