--- a/_posts/2019-12-3-nesting.md
+++ b/_posts/2019-12-3-nesting.md
@@ -1,5 +1,4 @@
 ---
-                                 #url se určuje podle názvu
 title: Fusion 360 postprocesor + nesting #title|název článku   
 layout: post                     #layout|šablona
 author: Kuba Andrysek            #authos|autor
@@ -8,7 +7,8 @@ category: Návody               #category|kategorie -> pro novou kategorii je po
 description: Návod pro přípravu podkladů pro laser z Fusion 360             #Header|nadpis
 media_folder: nesting
 thumbnail: nesting6.png              #thumbnail|titulní foto -> cesta "/img/blog/**nazev-clanku/Kolo.png**"
---- 
+lang: cs
+---
 
 # Návod pro přípravu podkladů pro laser z Fusion 360
 
