--- a/_posts/2019-12-3-nesting.md
+++ b/_posts/2019-12-3-nesting.md
@@ -8,6 +8,7 @@ description: Návod pro přípravu podkladů pro laser z Fusion 360             
 media_folder: nesting
 thumbnail: nesting6.png              #thumbnail|titulní foto -> cesta "/img/blog/**nazev-clanku/Kolo.png**"
 lang: cs
+redirect_from: /navod/2019/12/03/nesting/
 ---
 
 # Návod pro přípravu podkladů pro laser z Fusion 360
